# learning_golang

./: .dockerignore  .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
api/protobuf-spec/: BUILD.bazel  grpc_example.proto
app/: BUILD.bazel  main.go
app/grpcclient/: BUILD.bazel  client.go
app/grpcserver/: BUILD.bazel  server.go
app/httpserver/: BUILD.bazel  main.go
app/httpserver/server/: BUILD.bazel  handlers.go  server.go
