load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/wanghran/learning_golang/app",
    visibility = ["//visibility:private"],
    deps = [
        "//library/wikipage:go_default_library",
    ],
)

go_binary(
    name = "main",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = ["*.go"],
    visibility = ["//visibility:public"],
)
