load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "grpc_example_proto",
    srcs = ["grpc_example.proto"],
    visibility = ["//visibility:public"],
    # deps = ["//github.com/wanghran/learning_golang/api/protobuf-spec:spec_proto"],
)

go_proto_library(
    name = "grpc_example_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/wanghran/learning_golang/api/protobuf-spec",
    proto = ":grpc_example_proto",
    visibility = ["//visibility:public"],
    # deps = ["//github.com/wanghran/learning_golang/api/protobuf-spec:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":grpc_example_go_proto"],
    importpath = "github.com/wanghran/learning_golang/api/protobuf-spec",
    visibility = ["//visibility:public"],
)
