load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/wanghran/learning_golang/app/grpcclient",
    visibility = ["//visibility:private"],
    deps = [
        "//api/protobuf-spec:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "grpcclient",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
