load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/wanghran/learning_golang/app/grpcserver",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "//api/protobuf-spec:go_default_library",
        ],
)

go_binary(
    name = "grpcserver",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
