load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library (
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/wanghran/learning_golang/app/httpserver",
    deps = ["//app/httpserver/server:go_default_library"],
    visibility = ["//visibility:private"],
)

go_binary (
    name = "main",
    srcs = ["main.go"],
    deps = ["//app/httpserver:go_default_library"],
)